--- a/web/index.html
+++ b/web/index.html
@@ -1,29 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Hello Electron</title>
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MetaPriv - v0.0.1</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container mt-5">
-    <h1 class="text-center">Hello, Electron!</h1>
-    <p class="text-center">Welcome to your Electron application.</p>
-    <div class="d-grid gap-2 col-6 mx-auto">
-      <button class="btn btn-primary" type="button">Click Me</button>
-      <button class="btn btn-secondary" type="button">Or Me</button>
+    <div class="container mt-5">
+        <div class="row">
+            <!-- Login Form -->
+            <div class="col-md-6">
+                <h2>Login</h2>
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label for="loginUsername" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="loginUsername" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="loginPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="loginPassword" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
+            </div>
+
+            <!-- Create Account Form -->
+            <div class="col-md-6">
+                <h2>Create Account</h2>
+                <form id="createAccountForm">
+                    <div class="mb-3">
+                        <label for="createUsername" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="createUsername" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="createPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="createPassword" required>
+                    </div>
+                    <button type="submit" class="btn btn-success">Create Account</button>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Handle the login form submission
+        document.getElementById('loginForm').addEventListener('submit', async (event) => {
+            event.preventDefault();
+            const username = document.getElementById('loginUsername').value;
+            const password = document.getElementById('loginPassword').value;
+
+            try {
+                const user = await window.electronAPI.login(username, password);
+                alert('Login successful! User ID: ' + user.id);
+                // Redirect or perform additional actions
+            } catch (error) {
+                alert('Login failed: ' + error.message);
+            }
+        });
+
+        // Handle the create account form submission
+        document.getElementById('createAccountForm').addEventListener('submit', async (event) => {
+            event.preventDefault();
+            const username = document.getElementById('createUsername').value;
+            const password = document.getElementById('createPassword').value;
+
+            try {
+                const user = await window.electronAPI.createAccount(username, password);
+                alert('Account created successfully! User ID: ' + user.id);
+                // Redirect or perform additional actions
+            } catch (error) {
+                alert('Account creation failed: ' + error.message);
+            }
+        });
+    </script>
 </body>
-
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
 
 </html>
