--- a/web/index.html
+++ b/web/index.html
@@ -12,73 +12,12 @@
 <body>
     <div class="container mt-5">
         <div class="row">
-            <!-- Login Form -->
-            <div class="col-md-6">
-                <h2>Login</h2>
-                <form id="loginForm">
-                    <div class="mb-3">
-                        <label for="loginUsername" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="loginUsername" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="loginPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="loginPassword" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
-            </div>
-
-            <!-- Create Account Form -->
-            <div class="col-md-6">
-                <h2>Create Account</h2>
-                <form id="createAccountForm">
-                    <div class="mb-3">
-                        <label for="createUsername" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="createUsername" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="createPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="createPassword" required>
-                    </div>
-                    <button type="submit" class="btn btn-success">Create Account</button>
-                </form>
-            </div>
+            <h1>Flask App Loading</h1>
         </div>
     </div>
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Handle the login form submission
-        document.getElementById('loginForm').addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const username = document.getElementById('loginUsername').value;
-            const password = document.getElementById('loginPassword').value;
-
-            try {
-                const user = await window.electronAPI.login(username, password);
-                alert('Login successful! User ID: ' + user.id);
-                // Redirect or perform additional actions
-            } catch (error) {
-                alert('Login failed: ' + error.message);
-            }
-        });
-
-        // Handle the create account form submission
-        document.getElementById('createAccountForm').addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const username = document.getElementById('createUsername').value;
-            const password = document.getElementById('createPassword').value;
-
-            try {
-                const user = await window.electronAPI.createAccount(username, password);
-                alert('Account created successfully! User ID: ' + user.id);
-                // Redirect or perform additional actions
-            } catch (error) {
-                alert('Account creation failed: ' + error.message);
-            }
-        });
-    </script>
 </body>
 
 </html>
