--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-...yourHash..." crossorigin="anonymous"></script>
+  integrity="no integrity!" crossorigin="anonymous"></script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
